# SampleProject

./: README.md  build.gradle  config.gradle  import-summary.txt  settings.gradle
Android-Serialport-API/: build.gradle
Android-Serialport-API-GUN/: build.gradle
DetectorLib/: build.gradle
DetectorLib/src/main/: AndroidManifest.xml
DetectorLib/src/main/res/layout/: item_camera_device.xml
DetectorLib/src/main/res/values/: dimens.xml  strings.xml  styles.xml
FireFlower/: build.gradle
FireFlower/src/main/: AndroidManifest.xml
FireFlower/src/main/res/values/: strings.xml
HTTPSExample/: build.gradle
HTTPSExample/src/main/: AndroidManifest.xml
HTTPSExample/src/main/res/layout/: activity_main.xml
HTTPSExample/src/main/res/values/: strings.xml
InteractScreen/: build.gradle  proguard-rules.pro
InteractScreen/src/main/: AndroidManifest.xml
InteractScreen/src/main/res/drawable/: bg_splash.xml
InteractScreen/src/main/res/layout/: activity_main.xml  (+10 more)
MachineCart/: build.gradle  proguard-rules.pro
MachineCart/libs/: LeonidsLib-v1.0.0.aar
MachineCart/src/main/: AndroidManifest.xml
MachineMemberRegister/: build.gradle
MachineMemberRegister/libs/: libuvccamera.aar  usbCameraCommon.aar
MachineMemberRegister/src/main/: AndroidManifest.xml
MachineScreen/: build.gradle
MachineScreen/src/main/: AndroidManifest.xml
OpenLock/: build.gradle
OpenLock/src/main/: AndroidManifest.xml
PrinterPOS/: build.gradle
PrinterPOS/src/main/: AndroidManifest.xml
PrinterPOS/src/main/jni/: Android.mk  Application.mk  SerialPrinter.c  com_ian_printer_printer_SerialPort.h
apppush/: build.gradle  proguard-rules.pro
apppush/src/main/: AndroidManifest.xml
bubbleExplosion/: build.gradle
bubbleLayout/: build.gradle
bubbleLayout/src/main/: AndroidManifest.xml
libffmpeg/: CMakeLists.txt  build.gradle
libffmpeg/src/androidTest/java/com/function/ianchang/libffmpeg/: ExampleInstrumentedTest.java
libffmpeg/src/main/: AndroidManifest.xml
libffmpeg/src/main/cpp/: FFmpegHeader.h  native-lib.cpp
libffmpeg/src/main/java/com/function/ianchang/libffmpeg/: FFmpegUtils.java  MainActivity.java
libffmpeg/src/main/jni/: com_function_ianchang_libffmpeg_FFmpegUtils.h
libffmpeg/src/main/res/layout/: activity_main.xml
libffmpeg/src/main/res/values/: strings.xml
libffmpeg/src/test/java/com/function/ianchang/libffmpeg/: ExampleUnitTest.java
screenlibrary/: build.gradle
screenlibrary/src/main/: AndroidManifest.xml
simpleaidl/src/main/: AndroidManifest.xml
simpledagger/: build.gradle
simpledagger/src/main/: AndroidManifest.xml
simplegreendao/: build.gradle
simplegreendao/src/main/: AndroidManifest.xml
simplemvp/: build.gradle
simplemvp/src/main/: AndroidManifest.xml
simplemvp/src/main/jni/: DetectorManager.cpp  DetectorManager.h
vitamio/: build.gradle
weblibrary/: build.gradle
weblibrary/src/main/: AndroidManifest.xml
weblibrary/src/main/assets/: error_handle.html  index.html  main.css
widget/: build.gradle
widget/src/main/: AndroidManifest.xml
(+396 files in other folders)
